// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue/ternary/1tbs > nested ternary operator 1`] = `
"<script setup lang="ts">
const x = condition1
  ? condition2
    ? function foo() {}
    : function bar() {
        return 0;
      }
  : condition3
    ? function baz() {}
    : function qux() {
        return 0;
      };
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const x = condition1
          ? condition2
            ? function foo() {}
            : function bar() {
                return 0;
              }
          : condition3
            ? function baz() {}
            : function qux() {
                return 0;
              };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;

exports[`vue/ternary/1tbs > ternary operator 1`] = `
"<script setup lang="ts">
const x = condition
  ? function foo() {}
  : function bar() {
      return 0;
    };
</script>

<template>
  <button
    type="button"
    @click="
      () => {
        const x = condition
          ? function foo() {}
          : function bar() {
              return 0;
            };
      }
    "
  >
    Click Me
  </button>
</template>
"
`;
